# api/refill_station_problem_api.go
@@ -9,6 +9,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+type PostRequestRefillStationProblem struct {
+	StationID                 uint    `gorm:"not null" json:"station_id"`
+	Title                     string  `gorm:"size:100;not null" json:"title"`
+	Description               string  `gorm:"size:255;not null" json:"description"`
+	RefillStationProblemImage *[]byte `gorm:"type:TEXT;default:null" json:"problem_image"`
+	Status                    string  `gorm:"size:16;not null" json:"status"`
+}
+
 // @Summary Show all refill station problems
 // @Description Get all refill station problems
 // @Tags Refill Station Problems
@@ -59,22 +67,35 @@ func GetRefillStationProblemById(c *gin.Context) {
 // @Tags Refill Station Problems
 // @Accept json
 // @Produce json
-// @Param problem body database.RefillStationProblem true "Refill Station Problem"
+// @Param problem body PostRequestRefillStationProblem true "Refill Station Problem"
 // @Success 201 {object} database.RefillStationProblem
 // @Router /refill_station_problems [post]
 func CreateRefillStationProblem(c *gin.Context) {
-	var problem database.RefillStationProblem
-	if err := c.ShouldBindJSON(&problem); err != nil {
+	var requestProblem PostRequestRefillStationProblem
+	if err := c.ShouldBindJSON(&requestProblem); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	problem.Timestamp = time.Now()
-	result := db.Create(&problem)
+
+	var problemToInsert = database.RefillStationProblem{
+		StationID:   requestProblem.StationID,
+		Status:      requestProblem.Status,
+		Title:       requestProblem.Title,
+		Description: requestProblem.Description,
+		Timestamp:   time.Now(),
+	}
+
+	if requestProblem.RefillStationProblemImage != nil {
+		base64image := EncodeBytesToBase64(*requestProblem.RefillStationProblemImage)
+		problemToInsert.RefillStationProblemImage = &base64image
+	}
+
+	result := db.Create(&problemToInsert)
 	if result.Error != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": result.Error.Error()})
 		return
 	}
-	c.JSON(http.StatusCreated, problem)
+	c.JSON(http.StatusCreated, requestProblem)
 }
 
 // @Summary Update a refill station problem
