# docs/swagger.json
@@ -107,6 +107,72 @@
                 }
             }
         },
+        "/bottles/image": {
+            "put": {
+                "description": "Update the picture of a bottle",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bottles"
+                ],
+                "summary": "Update a bottle image",
+                "parameters": [
+                    {
+                        "description": "Bottle",
+                        "name": "bottle",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.UpdateBottleImageStruct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/database.Bottle"
+                        }
+                    }
+                }
+            }
+        },
+        "/bottles/image/{id}": {
+            "get": {
+                "description": "Get one bottle image with the given ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bottles"
+                ],
+                "summary": "Get bottle image by bottle ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.BottleImage"
+                        }
+                    }
+                }
+            }
+        },
         "/bottles/preferences/{nfcId}": {
             "get": {
                 "description": "Get bottle preferences by the NFC ID",
@@ -580,7 +646,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/database.RefillStationProblem"
+                            "$ref": "#/definitions/api.PostRequestRefillStationProblem"
                         }
                     }
                 ],
@@ -1061,7 +1127,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Show all users",
                 "responses": {
@@ -1085,7 +1151,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Update a user",
                 "parameters": [
@@ -1117,7 +1183,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Create a user",
                 "parameters": [
@@ -1149,7 +1215,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "Delete a user",
                 "parameters": [
@@ -1178,7 +1244,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "water_transactions"
+                    "Water Transactions"
                 ],
                 "summary": "Show all water transactions",
                 "responses": {
@@ -1202,7 +1268,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "water_transactions"
+                    "Water Transactions"
                 ],
                 "summary": "Update a water transaction",
                 "parameters": [
@@ -1234,7 +1300,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "water_transactions"
+                    "Water Transactions"
                 ],
                 "summary": "Create a water transaction",
                 "parameters": [
@@ -1266,7 +1332,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "water_transactions"
+                    "Water Transactions"
                 ],
                 "summary": "Delete a water transaction",
                 "parameters": [
@@ -1287,6 +1353,17 @@
         }
     },
     "definitions": {
+        "api.BottleImage": {
+            "type": "object",
+            "properties": {
+                "bottle_image": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
         "api.ContributionCommunityResponse": {
             "type": "object",
             "properties": {
@@ -1335,6 +1412,29 @@
                 }
             }
         },
+        "api.PostRequestRefillStationProblem": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "problem_image": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
+                "station_id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "api.StationImage": {
             "type": "object",
             "properties": {
@@ -1371,14 +1471,25 @@
                 }
             }
         },
+        "api.UpdateBottleImageStruct": {
+            "type": "object",
+            "properties": {
+                "bottle_id": {
+                    "type": "integer"
+                },
+                "bottle_image": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                }
+            }
+        },
         "database.Bottle": {
             "type": "object",
             "properties": {
                 "active": {
                     "type": "boolean"
-                },
-                "bottle_image": {
-                    "type": "string"
                 },
                 "fill_volume": {
                     "type": "integer"
@@ -1455,9 +1566,6 @@
                 "opening_times": {
                     "type": "string"
                 },
-                "refill_station_image": {
-                    "type": "string"
-                },
                 "type": {
                     "type": "string"
                 },
@@ -1474,9 +1582,6 @@
                 },
                 "id": {
                     "type": "integer"
-                },
-                "refill_station_problem_image": {
-                    "type": "string"
                 },
                 "station_id": {
                     "type": "integer"
